--- a/admin.html
+++ b/admin.html
@@ -3,58 +3,198 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>لوحة تحكم النخل</title>
+  <title>Palm Dashboard | لوحة تحكم النخل</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      direction: rtl;
+      font-family: 'Cairo', sans-serif;
+      transition: background 0.3s, color 0.3s;
+    }
+    .dark-mode {
+      background-color: #0f172a;
+      color: #f1f5f9;
+    }
+    .light-mode {
+      background-color: #ffffff;
+      color: #0f172a;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+    th, td {
+      border: 1px solid;
+    }
+    .dark-mode table,
+    .dark-mode td,
+    .dark-mode th {
+      background-color: #1e293b;
+      color: #f8fafc;
+      border-color: #334155;
+    }
+    .dark-mode thead {
+      background-color: #2dd4bf;
+      color: #0f172a;
+    }
+    .light-mode table,
+    .light-mode td,
+    .light-mode th {
+      background-color: #ffffff;
+      color: #1e293b;
+      border-color: #cbd5e1;
+    }
+    .light-mode thead {
+      background-color: #ccfbf1;
+      color: #047857;
+    }
+    .light-mode header,
+    .light-mode main {
+      background-color: #ffffff !important;
+    }
+    .dark-mode header,
+    .dark-mode main {
+      background-color: #0f172a !important;
     }
   </style>
 </head>
-<body class="bg-gray-50 p-6">
-  <h1 class="text-3xl font-bold text-green-700 mb-6 text-center">لوحة تحكم النخل 🌴</h1>
+<body class="min-h-screen transition-colors duration-300 light-mode" dir="rtl" id="body">
+  <!-- Navbar -->
+  <header class="shadow-md py-4 px-6 flex justify-between items-center">
+    <div class="flex items-center space-x-4 space-x-reverse">
+      <img src="44da9ae8-2149-455f-9d8d-24a06d2dd97b.jpeg" alt="شعار الهناء" class="w-12 h-12 rounded-full border border-green-500">
+      <div>
+        <h1 class="text-xl font-bold text-green-700 dark:text-yellow-400" id="company-name">الهناء للتنمية الزراعية</h1>
+        <p class="text-sm text-gray-500 dark:text-gray-300" id="company-desc">AL HANAA For Agricultural Development</p>
+      </div>
+    </div>
+    <div class="flex gap-4 items-center">
+      <select onchange="switchLanguage(this.value)" class="border px-2 py-1 rounded text-green-700 dark:text-yellow-300 bg-white dark:bg-gray-700">
+        <option value="ar">العربية</option>
+        <option value="en">English</option>
+      </select>
+      <button onclick="toggleDarkMode()" id="modeToggle" class="text-green-600 font-semibold hover:text-green-800 dark:text-yellow-400 dark:hover:text-yellow-300 text-xl">🌙</button>
+    </div>
+  </header>
 
-  <div class="overflow-x-auto bg-white rounded-xl shadow p-4">
-    <table class="min-w-full text-sm text-right">
-      <thead class="bg-green-100 text-green-800">
-        <tr>
-          <th class="p-2">رقم النخلة</th>
-          <th class="p-2">رقم الخط</th>
-          <th class="p-2">رقم الحوشة</th>
-          <th class="p-2">النوع</th>
-          <th class="p-2">الحالة</th>
-        </tr>
-      </thead>
-      <tbody id="table-body" class="text-gray-700">
-        <tr><td colspan="5" class="text-center p-4">جاري التحميل...</td></tr>
-      </tbody>
-    </table>
-  </div>
+  <!-- Main Content -->
+  <main class="p-6">
+    <h2 id="page-title" class="text-3xl font-bold text-green-700 dark:text-yellow-300 mb-6 text-center">لوحة تحكم النخل 🌴</h2>
+
+    <!-- Search & Filter -->
+    <div class="flex flex-col sm:flex-row gap-4 items-center justify-center mb-6">
+      <input type="text" id="searchInput" oninput="filterTrees()" placeholder="🔍 ابحث برقم أو نوع أو حالة..." class="px-4 py-2 rounded border w-full sm:w-1/3">
+    </div>
+
+    <div class="overflow-x-auto rounded-xl shadow p-4">
+      <table class="min-w-full text-sm text-right">
+        <thead>
+          <tr>
+            <th class="p-2" id="col-id">رقم النخلة</th>
+            <th class="p-2" id="col-line">رقم الخط</th>
+            <th class="p-2" id="col-field">رقم الحوشة</th>
+            <th class="p-2" id="col-type">النوع</th>
+            <th class="p-2" id="col-status">الحالة</th>
+          </tr>
+        </thead>
+        <tbody id="table-body" class="text-gray-700 dark:text-gray-200">
+          <tr><td colspan="5" class="text-center p-4">جاري التحميل...</td></tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
 
   <script>
+    let lang = 'ar';
+    let isDark = false;
+    let allData = {};
+    let currentData = {};
+
     async function loadAllTrees() {
       try {
         const response = await fetch('trees.json');
         const data = await response.json();
-
-        const tbody = document.getElementById('table-body');
-        tbody.innerHTML = '';
-
-        Object.entries(data).forEach(([id, tree]) => {
-          const row = `
-            <tr class="border-b">
-              <td class="p-2 font-semibold">${id}</td>
-              <td class="p-2">${tree.line}</td>
-              <td class="p-2">${tree.field}</td>
-              <td class="p-2">${tree.type}</td>
-              <td class="p-2">${tree.infected ? 'مصابة ❌' : 'غير مصابة ✅'}</td>
-            </tr>
-          `;
-          tbody.innerHTML += row;
-        });
+        allData = data;
+        currentData = data;
+        renderTable(data);
       } catch (error) {
-        document.getElementById('table-body').innerHTML = '<tr><td colspan="5" class="text-red-600 text-center p-4">فشل في تحميل البيانات.</td></tr>';
+        document.getElementById('table-body').innerHTML = `<tr><td colspan="5" class="text-red-600 text-center p-4">${lang === 'ar' ? 'فشل في تحميل البيانات.' : 'Failed to load data.'}</td></tr>`;
       }
+    }
+
+    function translateType(type) {
+      const types = {
+        'برحي': { ar: 'برحي', en: 'Barhi' },
+        'سكري': { ar: 'سكري', en: 'Sukkari' },
+        'مجهول': { ar: 'مجهول', en: 'Unknown' },
+      };
+      return types[type] ? types[type][lang] : (lang === 'en' ? 'Unknown' : type);
+    }
+
+    function renderTable(data) {
+      const tbody = document.getElementById('table-body');
+      tbody.innerHTML = '';
+      const entries = Object.entries(data);
+
+      if (!entries.length) {
+        tbody.innerHTML = `<tr><td colspan="5" class="text-red-600 text-center p-4">${lang === 'ar' ? 'لا توجد بيانات مطابقة.' : 'No matching data found.'}</td></tr>`;
+        return;
+      }
+
+      entries.forEach(([id, tree]) => {
+        const statusText = tree.infected ? (lang === 'ar' ? 'مصابة ❌' : 'Infected ❌') : (lang === 'ar' ? 'غير مصابة ✅' : 'Healthy ✅');
+        const typeText = translateType(tree.type);
+        const row = `
+          <tr class="border-b border-gray-200 dark:border-gray-700">
+            <td class="p-2 font-semibold">${id}</td>
+            <td class="p-2">${tree.line}</td>
+            <td class="p-2">${tree.field}</td>
+            <td class="p-2">${typeText}</td>
+            <td class="p-2">${statusText}</td>
+          </tr>
+        `;
+        tbody.innerHTML += row;
+      });
+    }
+
+    function toggleDarkMode() {
+      const body = document.getElementById('body');
+      isDark = !isDark;
+      body.classList.toggle('dark-mode', isDark);
+      body.classList.toggle('light-mode', !isDark);
+      document.getElementById('modeToggle').innerText = isDark ? '☀️' : '🌙';
+    }
+
+    function switchLanguage(selectedLang) {
+      lang = selectedLang;
+      document.documentElement.lang = lang;
+      document.body.dir = lang === 'ar' ? 'rtl' : 'ltr';
+
+      document.getElementById('company-name').innerText = lang === 'ar' ? 'الهناء للتنمية الزراعية' : 'Al Hanaa Agricultural Dev.';
+      document.getElementById('company-desc').innerText = lang === 'ar' ? 'AL HANAA For Agricultural Development' : 'Grow with care and science';
+      document.getElementById('page-title').innerText = lang === 'ar' ? 'لوحة تحكم النخل 🌴' : 'Palm Tree Dashboard 🌴';
+      document.getElementById('col-id').innerText = lang === 'ar' ? 'رقم النخلة' : 'Tree ID';
+      document.getElementById('col-line').innerText = lang === 'ar' ? 'رقم الخط' : 'Line Number';
+      document.getElementById('col-field').innerText = lang === 'ar' ? 'رقم الحوشة' : 'Field';
+      document.getElementById('col-type').innerText = lang === 'ar' ? 'النوع' : 'Type';
+      document.getElementById('col-status').innerText = lang === 'ar' ? 'الحالة' : 'Status';
+
+      document.getElementById('searchInput').placeholder = lang === 'ar' ? '🔍 ابحث برقم أو نوع أو حالة...' : '🔍 Search by ID, type, or status...';
+
+      renderTable(currentData);
+    }
+
+    function filterTrees() {
+      const search = document.getElementById('searchInput').value.trim().toLowerCase();
+      const filtered = Object.fromEntries(Object.entries(allData).filter(([id, tree]) => {
+        const statusText = tree.infected ? (lang === 'ar' ? 'مصابة' : 'infected') : (lang === 'ar' ? 'غير مصابة' : 'healthy');
+        return id.includes(search) ||
+          (tree.line + '').includes(search) ||
+          (tree.field + '').includes(search) ||
+          tree.type.toLowerCase().includes(search) ||
+          statusText.includes(search);
+      }));
+      currentData = filtered;
+      renderTable(filtered);
     }
 
     loadAllTrees();
