--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تفاصيل النخلة | Palm Tree Details</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script> <!-- مكتبة QR -->
   <style>
     body {
       font-family: 'Cairo', sans-serif;
@@ -63,7 +64,7 @@
     </div>
   </header>
 
-  <main class="flex items-center justify-center p-6">
+  <main class="flex items-center justify-center p-6 flex-col">
     <div id="content" class="rounded-2xl shadow-xl p-8 w-full md:w-2/3 text-right mt-10">
       <h2 id="page-title" class="text-3xl font-bold text-green-700 dark:text-yellow-300 mb-6 text-center">تفاصيل النخلة 🌴</h2>
       <div id="tree-details" class="overflow-x-auto">
@@ -72,6 +73,12 @@
           </tbody>
         </table>
       </div>
+    </div>
+
+    <!-- هنا يظهر الـ QR -->
+    <div class="flex flex-col items-center mt-8">
+      <div id="qrcode"></div>
+      <p class="mt-4 text-green-700 dark:text-yellow-300 text-lg font-semibold">Scan Me 📱</p>
     </div>
   </main>
 
@@ -171,7 +178,20 @@
       fetchTreeData();
     }
 
+    function generateQRCode() {
+      const currentUrl = window.location.href;
+      new QRCode(document.getElementById("qrcode"), {
+        text: currentUrl,
+        width: 150,
+        height: 150,
+        colorDark: "#000000",
+        colorLight: "#ffffff",
+        correctLevel: QRCode.CorrectLevel.H
+      });
+    }
+
     fetchTreeData();
+    generateQRCode(); // توليد الـ QR بمجرد تحميل الصفحة
   </script>
 </body>
 </html>
