--- a/admin.html
+++ b/admin.html
@@ -59,6 +59,16 @@
     .dark-mode th, .dark-mode td {
       border-color: #4b5563;
     }
+    /* Hide columns for small screens except the QR code column */
+    @media (max-width: 768px) {
+      th:nth-child(n+4):not(:nth-child(15)), td:nth-child(n+4):not(:nth-child(15)) {
+        display: none;
+      }
+      .qr-code-column {
+        width: 100%;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 <body class="min-h-screen light-mode" dir="rtl" id="body">
@@ -71,10 +81,10 @@
       </div>
     </div>
     <div class="flex gap-4 items-center">
-      <select onchange="switchLanguage(this.value)" class="border px-2 py-1 rounded text-green-700 dark:text-yellow-300 bg-white dark:bg-gray-700">
+      <!--<select onchange="switchLanguage(this.value)" class="border px-2 py-1 rounded text-green-700 dark:text-yellow-300 bg-white dark:bg-gray-700">
         <option value="ar">العربية</option>
         <option value="en">English</option>
-      </select>
+      </select>-->
       <button onclick="toggleDarkMode()" id="modeToggle" class="text-green-600 font-semibold hover:text-green-800 dark:text-yellow-400 dark:hover:text-yellow-300 text-xl">🌙</button>
     </div>
   </header>
@@ -100,7 +110,7 @@
               <th class="py-2 px-4 font-semibold text-green-500 dark:text-yellow-500">ملاحظات 2022</th>
               <th class="py-2 px-4 font-semibold text-green-500 dark:text-yellow-500">حالة العقد 2023</th>
               <th class="py-2 px-4 font-semibold text-green-500 dark:text-yellow-500">ملاحظات 2023</th>
-              <th class="py-2 px-4 font-semibold text-green-500 dark:text-yellow-500">توليد QR</th>
+              <th class="py-2 px-4 font-semibold text-green-500 dark:text-yellow-500 qr-code-column">توليد QR</th>
             </tr>
           </thead>
           <tbody id="palm-table-body" class="text-lg">
@@ -140,7 +150,7 @@
           const qrCodeContainerId = `qrcode-${id}`;
           const treeUrl = `https://omartouni20.github.io/QR_Palms/?id=${id}`;
           
-          return `
+          return `  
             <tr>
               <td class="py-2 px-4 border-b">${tree["نخلة"]}</td>
               <td class="py-2 px-4 border-b">${tree["خط"]}</td>
@@ -156,7 +166,7 @@
               <td class="py-2 px-4 border-b">${tree["ملاحظات 2022"] || 'لا توجد ملاحظات'}</td>
               <td class="py-2 px-4 border-b">${tree["حالة العقد 2023"]}</td>
               <td class="py-2 px-4 border-b">${tree["ملاحظات 2023"] || 'لا توجد ملاحظات'}</td>
-              <td class="py-2 px-4 border-b">
+              <td class="py-2 px-4 border-b qr-code-column">
                 <div id="${qrCodeContainerId}"></div>
                 <p class="text-center text-green-700 dark:text-yellow-700 font-semibold mt-2">Scan for ${tree["نخلة"]}</p>
                 <p class="text-center text-green-700 dark:text-yellow-700 mt-2">${tree["نخلة"]} - ${tree["خط"]} - ${tree["محبس"]}</p>
@@ -164,7 +174,6 @@
                   class="mt-2 px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
                   توليد QR
                 </button>
-         
               </td>
             </tr>
           `;
@@ -195,40 +204,6 @@
       body.classList.toggle('light-mode', !isDark);
       document.getElementById('modeToggle').textContent = isDark ? '☀️' : '🌙';
     }
-
-//    async function downloadQRCodeWithDetails(containerId) {
-//  const qrCodeElement = document.getElementById(containerId);
-//  
-//  if (!qrCodeElement) {
-//    console.error("QR Code element not found!");
-//    return;
-//  }
-//
-//  try {
-//    // محاولة تحميل الكائن باستخدام html2canvas مع تفعيل useCORS
-//    const canvas = await html2canvas(qrCodeElement, { logging: true, useCORS: true });
-//    
-//    // تحقق من الكائن الناتج
-//    console.log("Canvas object:", canvas);
-//    
-//    // تحقق مما إذا كان الكائن Canvas صالحًا
-//    if (canvas && canvas instanceof HTMLCanvasElement && typeof canvas.toDataURL === 'function') {
-//      const imgData = canvas.toDataURL('image/png');
-//      console.log("Generated image data:", imgData);
-//      
-//      // إنشاء رابط لتحميل الصورة
-//      const link = document.createElement('a');
-//      link.href = imgData;
-//      link.download = 'QRCode_with_details.png';
-//      link.click();
-//    } else {
-//      console.error("Canvas is invalid or does not support toDataURL.");
-//    }
-//  } catch (err) {
-//    console.error("Error generating canvas:", err);
-//  }
-//}
-
 
     fetchPalmData(); // Fetch and display palm tree data on page load.
   </script>
